--- a/android/build.gradle
+++ b/android/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:3.2.0'
 
         // walle
-        classpath 'com.meituan.android.walle:plugin:+'
+        classpath 'com.meituan.android.walle:plugin:1.1.6'
     }
 }
 
