--- a/android/config.gradle
+++ b/android/config.gradle
@@ -22,18 +22,16 @@ ext {
             rn          : 'com.facebook.react:react-native:+',
             design      : 'com.android.support:design:27.1.1',
             eventbus    : 'org.greenrobot:eventbus:3.0.0',
-            zxing       : 'com.google.zxing:core:3.+',
-            wechat      : 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+',
-            uapp        : 'com.umeng.sdk:analytics:latest.integration',
-            ucommon     : 'com.umeng.sdk:common:latest.integration',
-            walle       : 'com.meituan.android.walle:library:+',
-            sophix      : 'com.aliyun.ams:alicloud-android-hotfix:3.+',
+            zxing       : 'com.google.zxing:core:3.3.3',
+            wechat      : 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:5.1.6',
+            walle       : 'com.meituan.android.walle:library:1.1.6',
+            sophix      : 'com.aliyun.ams:alicloud-android-hotfix:3.2.7',
             fastjson    : 'com.alibaba:fastjson:1.1.68.android',
             exoplayer   : 'com.google.android.exoplayer:exoplayer:2.7.3',
             exopOKhttp  : 'com.google.android.exoplayer:extension-okhttp:2.7.3',
             multidex    : 'com.android.support:multidex:1.0.3',
             recyclerview: 'com.android.support:recyclerview-v7:27.1.1',
-            glide          : 'com.github.bumptech.glide:glide:4.+',
-            glideprocessor : 'com.github.bumptech.glide:compiler:4.+',
+            glide          : 'com.github.bumptech.glide:glide:4.8.0',
+            glideprocessor : 'com.github.bumptech.glide:compiler:4.8.0',
     ]
 }
