--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -118,6 +118,7 @@ dependencies {
     api project(':react-native-image-picker')
     api project(':react-native-linear-gradient')
     api project(':react-native-geolocation')
+    api project(':react-native-fetch-blob')
     api project(':rn_deviceinfo')
     api project(path: ':commonlib')
     api project(path: ':qiyu_service')
