--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -50,6 +50,10 @@
     <!--<uses-permission android:name="android.permission.READ_CONTACTS" />-->
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!-- Required -->
+    <permission
+        android:name="com.meeruu.sharegoods.permission.JPUSH_MESSAGE"
+        android:protectionLevel="signature" />
 
     <uses-permission
         android:name="android.permission.INJECT_EVENTS"
