--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -235,7 +235,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.MainRNActivity"
+            android:name=".ui.activity.MainRNActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"
@@ -244,7 +244,7 @@
             android:name="com.facebook.react.devsupport.DevSettingsActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.QrCodeScanActivity"
+            android:name=".ui.activity.QrCodeScanActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustNothing|stateHidden" />
         <activity
