1.提现联调 2.绑卡联调

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
 
     <application
         android:name=".application.SophixStubApplication"
+        android:largeHeap="true"
         android:allowBackup="false"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
