--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "react-native-swipeout": "2.3.4",
         "react-native-swiper": "1.5.8",
         "react-native-tab-navigator": "0.3.4",
+        "react-native-text-ticker": "0.13.0",
         "react-native-underline-tabbar": "1.3.6",
         "react-native-update": "^5.1.3",
         "react-native-vector-icons": "4.6.0",
