--- a/android/commonlib/build.gradle
+++ b/android/commonlib/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     api rootProject.ext.dependencies.zxing
     api rootProject.ext.dependencies.walle
     api rootProject.ext.dependencies.multidex
+    api rootProject.ext.dependencies.recyclerview
     // From node_modules
     api(rootProject.ext.dependencies.rn) {
         exclude group: 'com.android.support'
