--- a/ios/crm_app_xiugou/Info.plist
+++ b/ios/crm_app_xiugou/Info.plist
@@ -156,7 +156,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>App需要您的同意,才能访问相机</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App需要知道您的地理信息,以便更好的为您服务</string>
+	<string>秀购会在附近店铺服务中使用您的位置信息</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>APP需要访问您的麦克风,以便发送语音</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
