--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,7 +88,7 @@ android {
 }
 
 dependencies {
-    compile project(':lottie-react-native')
+    api project(':lottie-react-native')
 
     api fileTree(include: ['*.jar'], dir: 'libs')
 
@@ -121,7 +121,7 @@ dependencies {
     api project(':react-native-svg')
     api project(':react-native-image-picker')
     api project(':react-native-linear-gradient')
-    api project(':react-native-geolocation')
+    api project(':geolocation')
     api project(':react-native-fetch-blob')
     api project(':rn_deviceinfo')
     api project(':react-native-cookies')
