--- a/android/rn-image-picker.gradle
+++ b/android/rn-image-picker.gradle
@@ -31,6 +31,7 @@ repositories {
 }
 
 dependencies {
+    api fileTree(include: ['*.jar'], dir: 'libs')
     api rootProject.ext.dependencies.support
     // From node_modules
     api(rootProject.ext.dependencies.rn) {
