--- a/android/rn-webView-bridge.gradle
+++ b/android/rn-webView-bridge.gradle
@@ -3,7 +3,6 @@ apply plugin: 'com.android.library'
 buildscript {
     repositories {
         jcenter()
-//        google()
     }
 }
 
@@ -22,6 +21,7 @@ android {
 }
 
 dependencies {
+    api fileTree(include: ['*.jar'], dir: 'libs')
     api rootProject.ext.dependencies.support
     // From node_modules
     api(rootProject.ext.dependencies.rn) {
