--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -111,8 +111,8 @@ dependencies {
     api project(':rn_deviceinfo')
     api project(':react-native-cookies')
     api project(':react-native-webview-bridge')
-    api project(path: ':commonlib')
-    api project(path: ':qiyu_service')
-    api project(path: ':qrcode')
-    api project(path: ':lottie')
+    api project(':commonlib')
+    api project(':qiyu_service')
+    api project(':qrcode')
+    api project(':lottie')
 }
