--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@mr/image-placeholder": "0.1.13",
         "@mr/react-native-cookies": "0.0.3",
         "@mr/react-native-webview": "0.2.4",
+        "@mr/largelist": "^1.0.0",
         "axios": "0.18.0",
         "jsrsasign": "8.0.12",
         "lottie-react-native": "2.5.10",
@@ -39,7 +40,6 @@
         "react-native-device-info": "^0.24.3",
         "react-native-ezswiper": "^1.2.2",
         "react-native-image-picker": "0.26.10",
-        "react-native-largelist": "^1.2.12",
         "react-native-qrcode": "0.2.7",
         "react-native-render-html": "^3.10.0",
         "react-native-svg": "6.5.2",
