--- a/config.json
+++ b/config.json
@@ -70,6 +70,10 @@
             "name": "杨飞",
             "host": "http://172.16.10.158:9090/gateway",
             "h5": "https://uath5.sharegoodsmall.com"
+        },
+        "龚日红":{
+            "name": "龚日红",
+            "host": "http://172.16.10.177:18080/gateway"
         }
     }
 }
