--- a/android/config.gradle
+++ b/android/config.gradle
@@ -12,8 +12,8 @@ ext {
             applicationId    : "com.meeruu.sharegoods",
             minSdkVersion    : 16,
             targetSdkVersion : 27,
-            versionCode      : 1046,
-            versionName      : "1.0.4.6"
+            versionCode      : 1047,
+            versionName      : "1.0.4.7"
     ]
 
     dependencies = [
@@ -30,7 +30,6 @@ ext {
             fastjson    : 'com.alibaba:fastjson:1.1.68.android',
             exoplayer   : 'com.google.android.exoplayer:exoplayer:2.7.3',
             exopOKhttp  : 'com.google.android.exoplayer:extension-okhttp:2.7.3',
-            multidex    : 'com.android.support:multidex:1.0.3',
-            recyclerview: 'com.android.support:recyclerview-v7:27.1.1',
+            multidex    : 'com.android.support:multidex:1.0.3'
     ]
 }
