--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -107,6 +107,7 @@ dependencies {
     api project(':react-native-image-picker')
     api project(':react-native-linear-gradient')
     api project(':geolocation')
+    api project(':request')
     api project(':react-native-fetch-blob')
     api project(':rn_deviceinfo')
     api project(':react-native-cookies')
