--- a/ios/Podfile
+++ b/ios/Podfile
@@ -34,10 +34,15 @@ pod 'UMCShare/Social/ReducedSina'
 pod 'QIYU_iOS_SDK',   '~> 4.6.0'
 #极光
 pod 'JPush', '3.1.0'
+#神策
+pod 'SensorsAnalyticsSDK', :subspecs => ['ENABLE_REACT_NATIVE_APPCLICK']
 
 ##绘图和icon
 #pod 'RNSVG', :path => '../node_modules/react-native-svg'
 #pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+#  pod 'lottie-react-native', :path => '../node_modules/lottie-react-native'
+
+
 end
 
 #    暂时未用,先注释已被后期使用
