fix:修复token失效,我的未登录页面 更新部分字体  极光更新别名,和标签位置

--- a/config.json
+++ b/config.json
@@ -97,6 +97,10 @@
         "李俊": {
             "name": "李俊",
             "host": "http://172.16.10.79:9090/gateway"
+        },
+        "申xiangyu": {
+            "name": "申xiangyu",
+            "host": "http://172.16.10.91:18080/gateway"
         }
     }
 }
