--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "dependencies": {
         "@mr/geolocation": "0.1.6",
         "@mr/image-placeholder": "0.1.15",
+        "@mr/largelist": "^1.0.1",
         "@mr/react-native-cookies": "0.0.3",
         "@mr/react-native-webview": "0.2.4",
-        "@mr/largelist": "^1.0.1",
-        "@mr/request": "0.0.21",
+        "@mr/request": "0.1.0",
         "axios": "0.18.0",
         "jsrsasign": "8.0.12",
         "lottie-react-native": "2.5.10",
@@ -32,6 +32,7 @@
         "mobx-react": "5.2.3",
         "prop-types": "15.6.2",
         "qs": "6.5.2",
+        "query-string": "^6.2.0",
         "react": "16.2.0",
         "react-native": "0.53.3",
         "react-native-animatable": "1.3.0",
