--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "@mr/largelist": "^1.0.1",
         "@mr/react-native-cookies": "0.0.3",
         "@mr/react-native-webview": "0.2.4",
-        "@mr/request": "0.0.22",
-        "@sensors.data/react-native-sensors-analytics": "^1.0.0",//神策
+        "@mr/request": "0.0.22", 
+        "@sensors.data/react-native-sensors-analytics": "^1.0.0",
         "axios": "0.18.0",
         "jsrsasign": "8.0.12",
         "lottie-react-native": "2.5.10",
