--- a/android/commonlib/build.gradle
+++ b/android/commonlib/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     api rootProject.ext.dependencies.walle
     api rootProject.ext.dependencies.multidex
     api rootProject.ext.dependencies.recyclerview
+    api rootProject.ext.dependencies.sensors
+
     // From node_modules
     api(rootProject.ext.dependencies.rn) {
         exclude group: 'com.android.support'
