--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-    "presets": ["react-native"],
-    "plugins": [
-        "syntax-decorators",
-        "transform-decorators-legacy"
-    ]
+  "presets": ["module:metro-react-native-babel-preset"]
 }
