--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,6 @@ DerivedData
 *.ipa
 *.xcuserstate
 project.xcworkspace
-*.mobileprovision
-Pods/
 
 # Android/IntelliJ
 #
@@ -54,21 +52,5 @@ buck-out/
 */fastlane/Preview.html
 */fastlane/screenshots
 
-yarn.lock
-package-lock.json
-/android/.gradle/
-/android/.idea/
-/android/build/
-/android/gradle/
-/android/gradlew
-/android/gradlew.bat
-/android/keystores/
-pgyer/
-tsconfig.json
-/android/app/src/main/assets/index.android.bundle.meta
-/android/app/src/main/assets/index.android.bundle
-/android/app/release/
-
-.update
-/uploadPackage
-build
+# Bundle artifact
+*.jsbundle
