--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: rootProject.ext.plugins.application
+//添加 com.sensorsdata.analytics.android 插件
+//apply plugin: 'com.sensorsdata.analytics.android'
 
 project.ext.react = [
         entryFile: "index.js"
@@ -87,8 +89,8 @@ dependencies {
     debugImplementation('com.squareup.leakcanary:leakcanary-support-fragment:1.6.2') {
         exclude(module: 'support-core-utils')
     }
-    api rootProject.ext.dependencies.support
 
+    api rootProject.ext.dependencies.support
     api rootProject.ext.dependencies.eventbus
     api rootProject.ext.dependencies.zxing
     api rootProject.ext.dependencies.wechat
@@ -106,12 +108,13 @@ dependencies {
     api project(':react-native-svg')
     api project(':react-native-image-picker')
     api project(':react-native-linear-gradient')
-    api project(':geolocation')
-    api project(':request')
     api project(':react-native-fetch-blob')
     api project(':rn_deviceinfo')
-    api project(':react-native-cookies')
     api project(':react-native-webview-bridge')
+//    api project(':@sensors.data/react-native-sensors-analytics')
+//    api project(':@mr/request')
+//    api project(':@mr/react-native-cookies')
+//    api project(':@mr/geolocation')
     api project(':commonlib')
     api project(':qiyu_service')
     api project(':qrcode')
