--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,19 @@
 apply from: "config.gradle"
 
 buildscript {
-
     repositories {
         mavenCentral()
         google()
+        //添加 Sensors Analytics maven 库地址
+        maven {
+            url 'https://dl.bintray.com/zouyuhan/maven'
+        }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        //添加神策分析 android-gradle-plugin 依赖
+        classpath 'com.sensorsdata.analytics.android:android-gradle-plugin2:2.2.3'
     }
 }
 
@@ -16,6 +21,10 @@ allprojects {
     repositories {
         mavenCentral()
         google()
+        //添加 Sensors Analytics maven 库地址
+        maven {
+            url 'https://dl.bintray.com/zouyuhan/maven'
+        }
         jcenter()
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
