修改售后UI、提交申请输入金额控制

--- a/config.json
+++ b/config.json
@@ -101,6 +101,14 @@
         "申xiangyu": {
             "name": "申xiangyu",
             "host": "http://172.16.10.91:18080/gateway"
+        },
+        "开发平台18080": {
+            "name": "开发平台18080",
+            "host": "http://192.168.100.20:18080/gateway"
+        },
+        "开发平台9090": {
+            "name": "开发平台9090",
+            "host": "http://192.168.100.20:9090/gateway"
         }
     }
 }
