--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -113,7 +113,7 @@ dependencies {
     api project(':react-native-webview-bridge')
     api project(':@sensors.data/react-native-sensors-analytics')
     api project(':@mr/request')
-    api project(':@mr/react-native-cookies')
+    api project(':@mr/cookies')
     api project(':@mr/geolocation')
     api project(':commonlib')
     api project(':qiyu_service')
